# django-compliance-shield

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
compliance_shield/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  checks.py  conf.py  decorators.py  encryption.py  middleware.py  notifications.py  serializers.py  urls.py  utils.py
compliance_shield/management/commands/: compliance_setup.py  enforce_retention.py  rotate_keys.py
compliance_shield/migrations/: 0001_initial.py
compliance_shield/models/: __init__.py  audit.py  breach.py  consent.py  dsr.py  retention.py
compliance_shield/templates/compliance_shield/: consent.html  dsr_confirm.html  privacy_settings.html
compliance_shield/views/: __init__.py  consent.py  dsr.py  privacy.py
docs/: configuration.md  field-types.md  jurisdictions.md  quickstart.md
tests/: test_consent.py  test_dsr.py  test_encryption.py  test_middleware.py  test_retention.py
