[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "django-compliance-shield"
version = "1.1.0"
description = "Drop-in Django library for global privacy compliance: DPDP, GDPR, CCPA, FCRA. Field-level encryption, consent management, DSR tracking, breach notification, and data retention — all via a single decorator."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yogesh Chauhan", email = "yogesh@pysquad.com" }
]
keywords = [
    "django", "privacy", "compliance", "GDPR", "DPDP", "CCPA", "FCRA",
    "encryption", "consent", "data-protection", "privacy-shield"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/yogesh-chauhan/django-compliance-shield"
Documentation = "https://github.com/yogesh-chauhan/django-compliance-shield#readme"
Repository = "https://github.com/yogesh-chauhan/django-compliance-shield"
"Bug Tracker" = "https://github.com/yogesh-chauhan/django-compliance-shield/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["compliance_shield*"]

[tool.setuptools.package-data]
"compliance_shield" = [
    "templates/compliance_shield/*.html",
    "migrations/*.py",
]
